# remotemono

./: .gitignore  README.md
src/: CMakeLists.txt  InitFlags.cmake
src/cmake/: FindBlackBone.cmake  FindMono.cmake  FindRemoteMono.cmake
src/remotemono/: IPCVector.h  IPCVector_Impl.h  RMonoAPI.h  RMonoAPIBackend.h  RMonoAPIDispatcher.h  RMonoAPIFunction.h  RMonoBackend.h  RMonoBackendBlackBone.h  RMonoException.h  RMonoHandle.h  RMonoRemoteException.h  RMonoTypes.h  RMonoVariant.h  RMonoVariantArray.h  asmutil.h  config.h  log.h  util.h
src/remotemono-test/: CMakeLists.txt  System.cpp  System.h  TestBackend.cpp  TestBackend.h  TestEnvException.cpp  TestEnvException.h  config.cmake.h  config.h  main.cpp  pch.h
src/remotemono-test/backend/: BlackBoneTestBackend.cpp  BlackBoneTestBackend.h
src/remotemono-test/tests/: IPCVector.cpp  MonoAPIArray.cpp  MonoAPIAssembly.cpp  MonoAPIClass.cpp  MonoAPIDomain.cpp  MonoAPIField.cpp  MonoAPIImage.cpp  MonoAPIMetadata.cpp  MonoAPIMethod.cpp  MonoAPIMisc.cpp  MonoAPIObject.cpp  MonoAPIProperty.cpp  MonoAPIString.cpp  RMonoHandle.cpp  RMonoHelpers.cpp
src/remotemono/helper/: RMonoHelpers.h
src/remotemono/helper/impl/: RMonoClass_Def.h  RMonoClass_Impl.h  RMonoField_Def.h  RMonoField_Impl.h  RMonoHelperContext_Def.h  RMonoHelperContext_Impl.h  RMonoMethod_Def.h  RMonoMethod_Impl.h  RMonoObject_Def.h  RMonoObject_Impl.h  RMonoProperty_Def.h  RMonoProperty_Impl.h
src/remotemono/impl/: RMonoAPIBackend_Def.h  RMonoAPIBackend_Impl.h  RMonoAPIBase_Def.h  RMonoAPIBase_Impl.h  RMonoAPIDispatcher_Def.h  RMonoAPIFunctionAPI_Def.h  RMonoAPIFunctionAPI_Impl.h  RMonoAPIFunctionCommon_Def.h  RMonoAPIFunctionRaw_Def.h  RMonoAPIFunctionSimple_Def.h  RMonoAPIFunctionTypeAdapters.h  RMonoAPIFunctionWrap_Def.h  RMonoAPIFunctionWrap_Impl.h  RMonoAPIFunction_Def.h  RMonoAPIFunction_Impl.h  RMonoAPI_Def.h  RMonoAPI_Impl.h  RMonoHandle_Def.h  RMonoHandle_FwdDef.h  RMonoHandle_Impl.h  RMonoTypes.h  RMonoVariantArray_Def.h  RMonoVariant_Def.h  RMonoVariant_Impl.h
src/remotemono/impl/abi/: RMonoABI.h  RMonoABIConverter.h  RMonoABITypeTraits.h  RMonoABI_FwdDef.h
src/remotemono/impl/abi/winx32/: RMonoABITypeTraitsWinX32.h  RMonoABIWinX32.h
src/remotemono/impl/abi/winx64/: RMonoABITypeTraitsWinX64.h  RMonoABIWinX64.h
src/remotemono/impl/backend/: AsmJit.h  RMonoAsmHelper.h  RMonoBackend.h  RMonoBackendTypes.h  RMonoMemBlock.h  RMonoModule.h  RMonoProcess.h  RMonoRPCFunc.h
src/remotemono/impl/backend/blackbone/: RMonoBlackBoneAsmHelper.h  RMonoBlackBoneBackend.h  RMonoBlackBoneModule.h  RMonoBlackBoneProcess.h  RMonoBlackBoneRPCFunc.h
src/remotemono/impl/exception/: RMonoException_Def.h  RMonoRemoteException_Def.h  RMonoRemoteException_Impl.h  RMonoUnsupportedAPIException_Def.h
src/remotemono/impl/mono/: README
src/remotemono/impl/visit_struct/: visit_struct_intrusive.hpp
src/samples/: CMakeLists.txt
src/samples/redrunner/: CMakeLists.txt  config.cmake.h  config.h  main.cpp  main_direct.cpp  main_helpers.cpp  pch.h
